netpol/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
  namespace: net
  labels:
    app: nginx
spec:
  podSelector:
    matchLabels:
      app: nginx
